examples/invalid_provider_harness/duplicate_harness_name.argx
module invalid.duplicate
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
harness H { provider OpenAI mode dry_run network denied secrets denied filesystem none }
harness H { provider OpenAI mode simulated network denied secrets denied filesystem read_only }
